# telepathy-gadu

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.in  generate_deb.py  telepathy-gadu  telepathy-sunshine
data/: Makefile.am  gadu.manager  org.freedesktop.Telepathy.ConnectionManager.gadu.service.in  org.freedesktop.Telepathy.ConnectionManager.sunshine.service.in  sunshine.manager  wscript
gadu/: Makefile.am  __init__.py  aliasing.py  avatars.py  capabilities.py  channel_manager.py  connection.py  connection_manager.py  contacts.py  debug.py  handle.py  presence.py
gadu/channel/: Makefile.am  __init__.py  contact_list.py  group.py  media.py  text.py
gadu/lqsoft/: Makefile.am
gadu/lqsoft/cstruct/: Makefile.am  common.py
gadu/lqsoft/cstruct/fields/: Makefile.am  __init__.py  complex.py  numeric.py  text.py
gadu/lqsoft/cstruct/test/: Makefile.am  __init__.py  test_strings.py
gadu/lqsoft/ggclient/: simple_client.glade  simple_client.py
gadu/lqsoft/pygadu/: Makefile.am  models.py  network.py  network_base.py  network_v8.py  packets.py  twisted_protocol.py
gadu/lqsoft/utils/: Makefile.am  __init__.py
gadu/twistedgadu/: GGConstans.py  Helpers.py  main.py
gadu/util/: Makefile.am  decorator.py
sunshine/: Makefile.am  aliasing.py  avatars.py  capabilities.py  channel_manager.py  connection.py  connection_manager.py  contacts.py  debug.py  handle.py  presence.py
sunshine/channel/: Makefile.am  __init__.py  contact_list.py  group.py  text.py
sunshine/lqsoft/: Makefile.am
sunshine/lqsoft/cstruct/: Makefile.am  common.py  constraints.py
sunshine/lqsoft/pygadu/: Makefile.am  models.py  network.py  network_base.py  network_v8.py  twisted_protocol.py
sunshine/lqsoft/utils/: Makefile.am
sunshine/util/: Makefile.am
(+7 files in other folders)
