AC_INIT(telepathy-gadu, 0.1.3)
AM_INIT_AUTOMAKE

AM_PATH_PYTHON(2.4)

AC_OUTPUT([
Makefile
data/Makefile
gadu/lqsoft/Makefile
gadu/lqsoft/cstruct/Makefile
gadu/lqsoft/cstruct/fields/Makefile
gadu/lqsoft/cstruct/test/Makefile
gadu/lqsoft/pygadu/Makefile
gadu/lqsoft/utils/Makefile
gadu/Makefile
gadu/util/Makefile
gadu/channel/Makefile
])
