AC_INIT(telepathy-sunshine, 0.1.4)
AM_INIT_AUTOMAKE

AM_PATH_PYTHON(2.4)

AC_OUTPUT([
Makefile
data/Makefile
sunshine/lqsoft/Makefile
sunshine/lqsoft/cstruct/Makefile
sunshine/lqsoft/cstruct/fields/Makefile
sunshine/lqsoft/cstruct/test/Makefile
sunshine/lqsoft/pygadu/Makefile
sunshine/lqsoft/utils/Makefile
sunshine/Makefile
sunshine/util/Makefile
sunshine/channel/Makefile
])
